--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -7,6 +7,7 @@
     "swimming": "السباحة",
     "fields": "الملاعب الرياضية",
     "clients": "العملاء",
+    "users": "المستخدمون",
     "roles": "أدوار المستخدمين",
     "payments": "المدفوعات",
     "profile": "الملف الشخصي",
