--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -7,6 +7,7 @@
     "swimming": "Swimming",
     "fields": "Sports Fields",
     "clients": "Clients",
+    "users": "Users",
     "roles": "User Roles",
     "payments": "Payments",
     "profile": "Profile",
